--- a/style.css
+++ b/style.css
@@ -4,19 +4,39 @@
     box-sizing: border-box;
 }
 
+body {
+    background: #121214;
+    display: grid;
+    justify-content: center;
+
+    padding: 72px 104px;
+}
+
+header h1 {
+    font-weight: 900;
+    font-size: 56px;
+    line-height: 72px;
+
+    color: #02799d;
+}
+
+header p {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 40px;
+
+    color: #e1e1e6;
+}
+
+
 main {
+    margin-top: 62px;
     display: grid;
     grid-template-columns: repeat(3, 370px);
-    place-content: center;
+    
 
     row-gap: 48px;
     column-gap: 60px;
-}
-
-body {
-    background: #121214;
-
-    padding: 72px 104px;
 }
 
 
